<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundBlack"
    tools:context=".ui.profile.ChangePassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/container"
            android:layout_centerInParent="true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="30dp"
                >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Change Password"
                    android:layout_marginTop="36dp"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppinssemibold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_below="@id/title"
                    android:id="@+id/subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Enter your new password below"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppinsregular"
                    android:textColor="@color/black"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/newPW"
                    android:layout_below="@id/subtitle"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginHorizontal="12dp"
                    android:fontFamily="@font/poppinsregular"
                    android:layout_marginTop="56dp"
                    android:textColor="@color/white"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_new_pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="New Password"
                        android:maxLength="20"
                        android:fontFamily="@font/poppinsregular"
                        android:background="@drawable/ch_pw_ed_bg"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_pw"
                    android:layout_below="@id/newPW"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginHorizontal="12dp"
                    android:fontFamily="@font/poppinsregular"
                    android:layout_marginTop="36dp"
                    android:textColor="@color/white"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_conf_pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Confirm Password"
                        android:maxLength="20"
                        android:fontFamily="@font/poppinsregular"
                        android:background="@drawable/ch_pw_ed_bg"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/resetPW"
                    android:layout_below="@id/confirm_pw"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Reset Password"
                    android:textSize="12sp"
                    android:layout_marginHorizontal="12dp"
                    android:fontFamily="@font/poppinsregular"
                    android:textAlignment="center"
                    android:layout_marginTop="36dp"
                    android:layout_marginBottom="50dp"
                    android:backgroundTint="@color/btn_dark"
                    android:textColor="@color/white"
                    />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</FrameLayout>