...
        android:id="@+id/profileFragment"
        android:name="revandra.projects.inventorymanagementsystem.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" >
    </fragment>
    <fragment
        android:id="@+id/changePassword"
        android:name="revandra.projects.inventorymanagementsystem.ui.profile.ChangePassword"
        android:label="fragment_change_password"
        tools:layout="@layout/fragment_change_password" />
    <fragment
        android:id="@+id/variantFragment"
        android:name="revandra.projects.inventorymanagementsystem.ui.variant.VariantFragment"
...
