<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/loupe"
        android:title="@string/title_1" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/home"
        android:title="@string/title_2" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/add"
        android:title="@string/title_3" />

</menu>