...
                        android:backgroundTint="@color/electronics"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_marginLeft="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsbold"
                        android:text="Electronics"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
...
